syntax = "proto3";

package weather;

service WeatherService {
  rpc GetCurrentWeather (WeatherRequest) returns (WeatherResponse);
}

message WeatherRequest {
  string city = 1;
}

message WeatherResponse {
  double temperature = 1;
  double humidity = 2;
  string description = 3;
}
